Created sort function

--- a/static/index.html
+++ b/static/index.html
@@ -33,20 +33,20 @@
             <div class="sort"> 
                 <h3 class="sort__header">Sort channels by:</h3>
                 <ul class="sort__options">
-                    <li>
-                        <input class="choice choice--radio" name="sort" type="radio" id="sort-title">
+                      <li>
+                        <input class="choice choice--radio" name="sort" type="radio" id="sort-title" value="title">
                         <label class="choice__label" for="sort-title">title</label>
                     </li>
                     <li>
-                        <input class="choice choice--radio" name="sort" type="radio" id="sort-subscribers">
+                        <input class="choice choice--radio" name="sort" type="radio" id="sort-subscribers" value="subscribers">
                         <label class="choice__label" for="sort-subscribers">subscribers</label>
                     </li>
                     <li>
-                        <input class="choice choice--radio" name="sort" type="radio" id="sort-videos">
+                        <input class="choice choice--radio" name="sort" type="radio" id="sort-videos" value="videos">
                         <label class="choice__label" for="sort-videos">videos</label>
                     </li>
                     <li>
-                        <input class="choice choice--radio" name="sort" type="radio" id="sort-views">
+                        <input class="choice choice--radio" name="sort" type="radio" id="sort-views" value="views">
                         <label class="choice__label" for="sort-views">views</label>
                     </li>
                 </ul>
