Created button that reverses the order

--- a/static/index.html
+++ b/static/index.html
@@ -51,6 +51,7 @@
                     </li>
                 </ul>
                 <button class="button">Clear</button>
+                <button id="reverse" class="button button__reverse">Reverse</button>
             </div>
         </aside>
         <script src="script.js"></script>
