Created search bar function

--- a/static/index.html
+++ b/static/index.html
@@ -50,7 +50,7 @@
                         <label class="choice__label" for="sort-views">views</label>
                     </li>
                 </ul>
-                <button class="button">Clear</button>
+                <button id="clear" class="button">Clear</button>
                 <button id="reverse" class="button button__reverse">Reverse</button>
             </div>
         </aside>
