Created button that clears search bar and inputs

--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
     </head>
     <body class="wrapper">
         <header class="wrapper__header">
-            <h1 class="header"><span class="header__js-logo"></span> Channels</h1>
+            <h1 class="header"><span class="header__js-logo"><img class="image__resize" src="https://yt3.ggpht.com/a-/AN66SAxWC2To0-1xz2-X3HNC6WFdP8zPKKqqHk_8ug=s240-mo-c-c0xffffffff-rj-k-no" alt="JS-logo"></span> Channels</h1>
         </header>
         <main class="wrapper__main js-content" data-channels-container>
             <template channel-container-template>
