Created invert colors

--- a/static/index.html
+++ b/static/index.html
@@ -52,6 +52,7 @@
                 </ul>
                 <button id="clear" class="button">Clear</button>
                 <button id="reverse" class="button button__reverse">Reverse</button>
+                <button id="invert" class="button">Invert</button>
             </div>
         </aside>
         <script src="script.js"></script>
